--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
     "mongoose": "^5.2.9",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "session": "^0.1.0",
+    "popper.js": "^1.14.4",
     "sharp": "^0.20.5"
   }
 }
