--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
+    "marked": "^0.5.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.9",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
