--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-fileupload": "^0.4.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
