--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "popper.js": "^1.14.4",
-    "sharp": "^0.20.5"
+    "sharp": "^0.20.5",
+    "twig": "^1.12.0"
   }
 }
