--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "csurf": "^1.9.0",
+    "csv": "^4.0.0",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
@@ -20,10 +21,12 @@
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
+    "json2csv": "^4.2.1",
     "marked": "^0.5.0",
     "moment": "^2.22.2",
     "mongoose": "^5.2.9",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "popper.js": "^1.14.4",
