--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.2",
     "bootstrap": "^4.1.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.1",
@@ -26,6 +27,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.2.9",
     "morgan": "~1.9.0",
+    "node-fetch": "^2.2.0",
     "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
